contrast ratio issue fix

--- a/client/partials/_variables.scss
+++ b/client/partials/_variables.scss
@@ -4,5 +4,5 @@ $color-dark: #000000;
 $color-white: #ffffff;
 $color-info: #89d4d5;
 $color-grey: #6e6e6e93;
-$color-grey-light: #7f7e80;
+$color-grey-light: #424243;
 $brand-color: #c02957;
